--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,8 @@ backend/node_modules/
 frontend/node_modules/
 
 # Environment files
-backend/.env
-frontend/.env
+# backend/.env
+# frontend/.env
 
 # SQLite / Prisma databases
 backend/prisma/dev.db
