--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@ frontend/node_modules/
 
 # Environment files
 # backend/.env
+backend/.env
 # frontend/.env
+frontend/.env
 
 # SQLite / Prisma databases
 backend/prisma/dev.db
