--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "test:e2e:open": "cypress open"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
     "@tanstack/react-query": "^5.90.11",
     "axios": "^1.13.2",
     "react": "^19.2.0",
